nl after multiline if/else/for condition
requires https://github.com/uncrustify/uncrustify/pull/2361

--- a/ament_uncrustify/ament_uncrustify/configuration/ament_code_style.cfg
+++ b/ament_uncrustify/ament_uncrustify/configuration/ament_code_style.cfg
@@ -1019,6 +1019,9 @@ indent_ignore_asm_block         = false    # false/true
 # Newline adding and removing options
 #
 
+nl_multi_line_sparen_open = force
+nl_multi_line_sparen_close = ignore
+
 # Whether to collapse empty blocks between '{' and '}'.
 nl_collapse_empty_body          = false    # false/true
 
